--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
     margin: 0;
     padding: 0;
+}
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+h2{
+    font-size: 32px;
+}
+p{
+    font-size: 18px;
 }
 
 .conteiner {
@@ -41,18 +51,20 @@
 
 .name {
     font-size: 80px;
-}
+    text-shadow: 0px 2px 5px black;
+   }
 
 .name-content {
     font-size: 50px;
     display: block;
+    font-weight: 500;
+    text-shadow: 0px 2px 5px black;
 }
 
 .about {
     text-align: center;
     padding-top: 50px;
-    max-width: 1200px;
-   
+    max-width: 1200px;   
 }
 
 .about p {
@@ -65,7 +77,7 @@
     max-width: 1200px;    
 }
 .stack h2{
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .stack-content {
@@ -83,6 +95,8 @@ span::before{
     margin: 50px 0;
     text-align: center;
     max-width: 1200px;
+    font-size: 18px;
+    
 }
 
 .services ul {
@@ -90,7 +104,7 @@ span::before{
     text-align: left;
     padding-left: 200px;
     list-style: none;
-    line-height: 20px;
+    line-height: 25px;
 }
 .services ul li i{
     width:10px;
@@ -126,17 +140,28 @@ span::before{
     display: flex;
     flex-direction: column;    
     margin-bottom: 20px;
+    margin-top: 30px;
 }
 .link-menu a{
     width: 450px;
     height: 40px;
-    background-color: aqua;
+    background-color: grey;
     align-self: center;
     margin: 15px 0;
     padding-top: 10px;
     text-decoration: none;
     border-radius: 15px;
+    border: 2px solid rgb(91, 89, 89);
+    color: #fff;
+    font-size: 18px;
+    text-shadow: 0px 2px 5px black;
 }
+.contacts i{
+   padding-right: 15px;
+    font-size: 22px;
+    padding-top: 3px;        
+}
+
 .whatsapp span{
     margin: 0 20px;
 }
@@ -147,18 +172,47 @@ footer{
 }
 footer h3{
     margin-bottom: 20px;
+    font-size: 28px;
 }
 .footer-menu input[type='text']{
     margin: 10px 0 0 0;
+    border-radius: 4px;
+    width: 250px;
+    height: 20px;
 }
 .footer-menu input[type='tel']{
     margin: 10px 0 0 0;
+    border-radius: 4px;
+    width: 250px;
+    height: 20px;
 }
 .footer-menu input[type='email']{
     margin: 10px 0;
+    border-radius: 4px;
+    width: 250px;
+    height: 20px;
+}
+textarea{
+    border-radius: 4px;
 }
 .submit-button{
-    margin: 10px 0 ;
+    margin: 20px 0 ;
+    width: 80px;
+    height: 30px;
+    border-radius: 4px;
+   
+}
+.footer-menu{
+    display: flex;
+    justify-content: space-between;
+}
+.copyright{
+    padding: 0 30px 20px 0; 
+    align-self: flex-end;
+    
+}
+.copyright p{
+    font-size: 14px;
 }
 
 
